--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    font-family: "Poppins", sans-serif;
+    -webkit-box-sizing: border-box;
 }
 
 :root {
