--- a/css/desc.css
+++ b/css/desc.css
@@ -1,11 +1,9 @@
-
-	
-	
 #desc h1 {
     font-family: 'Courier New', Courier, monospace;
     color: var(--cor-primaria);
     text-align: center;
     margin: 20px;
+    font-size: 40px;
 }
 
 
@@ -19,8 +17,11 @@
 }
 
 #desc {
+
+    flex-direction: column;
     background: #F6F9FF;
-    height: 100vh;
+    /*height: 100vh;*/
+    padding: 40px 0;
     width: 100%;
 
     display: flex;
@@ -115,7 +116,12 @@ main.cards section.card.investir {
 
 @media screen and (max-width: 520px) {
     #desc h1, #desc h2{
-        font-size: 100%;
+        font-size: 15px;
+    
+    }
+
+    #desc h2{
+        padding: 5px;
     }
 
     #desc .align-colum{
